--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,12 +20,15 @@ pydantic = "1.10"
 uvicorn = "^0.23.2"
 beautifulsoup4 = "^4.12.2"
 weaviate-client = "^3.23.2"
-psycopg2 = "^2.9.7"
 lxml = "^4.9.3"
 voyageai = "^0.1.4"
 pillow = "^10.2.0"
 tiktoken = "^0.5.2"
 cohere = "4.45"
+asyncpg = "^0.29.0"
+sqlalchemy = "^2.0.30"
+psycopg2 = "^2.9.9"
+psycopg2-binary = "^2.9.9"
 
 
 [tool.poetry.group.lint.dependencies]
